Changing email address & add link to the logo

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -33,7 +33,7 @@
     <footer class="row">
       <div class="copyright">
         <span>&copy;</span>
-        <object type="image/svg+xml" data="/assets/img/logo.svg">WW aWesome</object>
+        <a href="{{ site.url }}"><img src="/assets/img/logo.svg" alt="wwawesome logo"></a>
       </div>
     </footer>
   </div>
