--- a/_includes/lead.html
+++ b/_includes/lead.html
@@ -1,7 +1,8 @@
  <section class="lead-section">
   <div class="container lead-container">
     <header>
-      <div class="logo"><object type="image/svg+xml" data="/assets/img/logo.svg">WW aWesome</object></div>
+        <div class="logo"> <a href="{{ site.url }}"><img src="/assets/img/logo.svg" alt="wwawesome logo"></a></div>
+      </a>
       <nav>
         <ul class="nav-links">
           {% for item in site.data.links %}
