--- a/assets/css/3_modules/_lead.sass
+++ b/assets/css/3_modules/_lead.sass
@@ -18,7 +18,7 @@
 
 header
   width: 100%
-  margin-top: 10px
+  margin-top: 20px
 
 nav
   margin-top: 20px
@@ -55,7 +55,7 @@ nav
 
 .logo
   text-align: center
-  & object
+  & img
     width: 250px
     margin: 0 auto
 
