--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,8 @@
     <meta name="twitter:site" content="@wwawesome">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,900" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
     <!-- Analytics -->
