--- a/assets/css/2_base/_variables.sass
+++ b/assets/css/2_base/_variables.sass
@@ -1,5 +1,5 @@
 // Gray Scale
-$white:  #fff
+$white:  #FFFFFF
 $silver: #DBDBDB
 $gray:   #95989A
 $black:  #111
@@ -7,6 +7,9 @@ $focus:  #A013A7
 $blue: #2F2F57
 $gray-shadow: rgba(0, 0, 0, 0.15)
 $pink-shadow: rgba(160, 19, 167, 0.85)
+
+$primary: #011627
+$secondary: #BBB8E0
 
 $headings: $gray
 
@@ -17,6 +20,6 @@ $font-base: 1rem
 $h1-font-size: $font-base * 2.5
 $h2-font-size: $font-base * 2
 $h3-font-size: $font-base * 1.5
-$h4-font-size: $font-base * 1.2
+$h4-font-size: $font-base * 0.9
 
 $p-font-size: $font-base
