--- a/assets/css/3_modules/_lead.sass
+++ b/assets/css/3_modules/_lead.sass
@@ -1,19 +1,7 @@
 .lead-section
-  background:
-    image: url("/assets/img/cover.png")
-    size: cover
-    position: top center
-  flex-direction: column
   height: 100vh
-  width: 100%
-  max-height: 800px
-  display: table
-
-.lead-container
-  height: inherit
   display: flex
   flex-direction: column
-  align-items: center
   justify-content: space-between
 
 header
@@ -34,102 +22,39 @@ nav
     display: inline-block
     text-decoration: none
 
-@media (any-hover)
-  .link
-    position: relative
-    padding-bottom: 3px
-    &::after
-      content: ''
-      background: $focus
-      position: absolute
-      height: 2px
-      width: 0
-      bottom: 0
-      left: auto
-      right: 0
-      transition: width 0.4s ease-in-out
-    &:hover::after
-      width: 100%
-      right: auto
-      left: 0
+.section-content
+  margin: auto 0
+  vertical-align: middle
+  @include make-md-column(10)
+  @include make-lg-column(10)
+  @include make-lg-column-push(1)
+  @include make-md-column-push(1)
 
 .logo
   text-align: center
   & img
-    width: 250px
+    width: 40px
     margin: 0 auto
 
-.section-content
-  width: 100%
-  margin: auto 0
-  vertical-align: middle
-
-h1
-  height: $font-base * 6
-  margin: 0 auto
-
-.focus
-  color: $focus
-
-.cta-container
+.info
+  //position: relative
+  background-color: $primary
+  color: $white
   text-align: center
-  margin: 10px 0
-
-.cta
-  display: inline-block
-  border: 2px solid $focus
-  width: 120px
-  font-size: 12px
   font-weight: 400
-  box-sizing: border-box
-  border-radius: 25px
-  padding: 8px
-  margin: 10px
-
-.highlight
-  background-color: $focus
-  box-shadow: 0px 0px 20px 1px rgba(160, 19, 167, 0.85)
-  &:hover
-    box-shadow: none
-
-.pointer-container
-  position: relative
-  width: 100px
-  height: 100px
-
-.pointer
-  position: absolute
-  z-index: 9
-  width: 80px
-  height: 80px
-  background-color: $focus
-  border-radius: 50%
-  margin-top: 10px
-  margin-left: 10px
-  animation: pulse 2.5s infinite
-
-.inner-pointer
-  width: 50px
-  height: 50px
-  border-radius: 50%
-  background-color: $focus
-  position: absolute
-  z-index: 10
-  margin-top: 25px
-  margin-left: 25px
-  text-align: center
-
-@keyframes pulse
-  0%
-    transform: scale(0.5)
-    opacity: 1
-  100%
-    transform: scale(1)
-    opacity: 0
-
-.arrow
-  font-size: 1.5rem
-  line-height: 50px
+  padding: 10px 10px 10px 10px
+  margin-top: 30px
+  @include make-md-column(4)
+  @include make-lg-column(4)
+  &::after
+    position: absolute
+    content: ''
+    z-index: -1
+    background-color: pink
+    width: auto
+    right: 0
+    height: 100px
+    //top: 10px
 
 @media (min-width: 769px)
   header
@@ -144,10 +69,6 @@ h1
     width: 100%
     li
       margin-left: 20px
-
-  .cta
-    width: 160px
-    font-size: 16px
 
 @media (min-width: $screen-xs-min)
 
