--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width" />
     <!-- Meta -->
-    <meta name="description" content="Looking for fantastic web site design in North West? WW aWesome are a small web development agency based in Liverpool." />
+    <meta name="description" content="Looking for fantastic web site design in North West? WW aWesome is a small web design studio based in Liverpool." />
     <meta name="author" content="Silviu Glavan">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon.ico/apple-icon-57x57.png">
@@ -55,8 +55,5 @@
   </head>
   <body>
       {{ content }}
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/assets/scripts/main.min.js"></script>
   </body>
 </html>
